fixed bug premission -> permission
