# models/Role.go
@@ -7,7 +7,8 @@ type Roles struct {
 type Role struct {
 	ModelDefault
 	RoleForCreate
-	ID uint `json:"id" gorm:"primary_key" example:"1" ` // Role id
+	ID          uint          `json:"id" gorm:"primary_key" example:"1" ` // Role id
+	Permissions []*Permission ` gorm:"many2many:permission_role"`         // Role permission
 }
 
 type RoleForCreate struct {
